<resources>
    <string name="app_name">TodoApp</string>
    <string name="home_hello">안녕하세요\nAndroid Practice Todo App</string>
    <string name="home_profile">유저정보</string>
    <string name="todo_add">ADD TODO</string>
    <string name="menu_home">홈</string>
    <string name="menu_todo">할일</string>
    <string name="dialog_title">할일 추가하기</string>
    <string name="dialog_date">날짜 : </string>
    <string name="dialog_todo">할일 : </string>
    <string name="dialog_date_hint">20210826</string>
    <string name="dialog_todo_hint">산책하기</string>
    <string name="dialog_ok">등록</string>
    <string name="dialog_cancel">취소</string>
    <string name="item_todo_status_done">DONE</string>
    <string name="item_todo_status_yet">Not Yet</string>
    <string name="editUser_user">유저 이름</string>
    <string name="editUser_edit">변경</string>
</resources>