<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/dialog_date"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_dialog_date"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_dialog_date"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dialog_date_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/dialog_todo"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_dialog_todo"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_dialog_todo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dialog_todo_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/et_dialog_date" />


</androidx.constraintlayout.widget.ConstraintLayout>